<resources>
    <string name="app_name">Solvio</string>
    <string name="action">Action</string>
    <string name="back">back</string>
    <string name="actions">Actions:</string>
    <string name="tagline">Educational children\'s game</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="close">Close</string>
    <string name="play">Play</string>
    <string name="create_new_level">Create new level</string>
    <string name="add_situation">Add situation</string>
    <string name="special_key">Special key</string>
    <string name="check_key">Check key</string>
    <string name="level_creation">Level creation</string>
    <string name="save">Save</string>
    <string name="level_name">Level name</string>
    <string name="description">Description</string>
    <string name="image_url">Image URL</string>
    <string name="adding_situation">Adding situation</string>
    <string name="actor_name">Actor name</string>
    <string name="actor_image_url">Actor image url</string>
    <string name="_1">1</string>
    <string name="result">Result</string>
    <string name="result_image_url">Result image url</string>
    <string name="_2">2</string>
    <string name="is_positive">Is positive</string>
    <string name="results">Results</string>
    <string name="back_to_levels_menu">Back to levels menu</string>
    <string name="show_choices_history">Show choices history</string>
    <string name="your_choice">Your choice:</string>
    <string name="choices_history">Choices history</string>
    <string name="reference_information">Reference information</string>
</resources>