<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/primary">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:paddingBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/pt_sans_narrow_bold"
                android:text="@string/level_creation"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="35sp" />

            <EditText
                android:id="@+id/levelNameEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:background="@color/secondary_white"
                android:fontFamily="@font/pt_sans_narrow_regular"
                android:hint="@string/level_name"
                android:inputType="text"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/primary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/descriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:background="@color/secondary_white"
                android:fontFamily="@font/pt_sans_narrow_regular"
                android:hint="@string/description"
                android:inputType="text"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/primary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/imageUrlEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:background="@color/secondary_white"
                android:fontFamily="@font/pt_sans_narrow_regular"
                android:hint="@string/image_url"
                android:inputType="textUri"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/primary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/saveButton"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_default_button"
                android:fontFamily="@font/pt_sans_narrow_regular"
                android:text="@string/save"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>