<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/primary">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:paddingBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/pt_sans_narrow_bold"
                android:text="@string/adding_situation"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="35sp" />

            <EditText
                android:id="@+id/actorNameEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:background="@color/secondary_white"
                android:fontFamily="@font/pt_sans_narrow_regular"
                android:hint="@string/actor_name"
                android:inputType="text"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/primary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/actorImageUrlEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:background="@color/secondary_white"
                android:fontFamily="@font/pt_sans_narrow_regular"
                android:hint="@string/actor_image_url"
                android:inputType="textUri"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/primary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/situationDescriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:background="@color/secondary_white"
                android:fontFamily="@font/pt_sans_narrow_regular"
                android:hint="@string/description"
                android:inputType="text"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/primary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/levelTextView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:background="@color/secondary_white"
                android:fontFamily="@font/pt_sans_narrow_regular"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:gravity="center"
                android:textAllCaps="false"
                android:textColor="@color/primary"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="Школа"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/pt_sans_narrow_bold"
                android:text="@string/actions"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/pt_sans_narrow_bold"
                android:text="@string/_1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/firstActionDescriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:background="@color/secondary_white"
                android:fontFamily="@font/pt_sans_narrow_regular"
                android:hint="@string/description"
                android:inputType="text"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/primary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/firstActionResultEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:background="@color/secondary_white"
                android:fontFamily="@font/pt_sans_narrow_regular"
                android:hint="@string/result"
                android:inputType="text"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/primary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/firstActionResultImageUrlEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:background="@color/secondary_white"
                android:fontFamily="@font/pt_sans_narrow_regular"
                android:hint="@string/result_image_url"
                android:inputType="textUri"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/primary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:gravity="center">

                <CheckBox
                    android:id="@+id/firstActionIsPositiveCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/pt_sans_narrow_regular"
                    android:text="@string/is_positive"
                    android:textAlignment="center"
                    android:textColor="@color/primary"
                    android:textStyle="bold"
                    android:textSize="20sp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/pt_sans_narrow_bold"
                android:layout_marginTop="24dp"
                android:text="@string/_2"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/secondActionDescriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:background="@color/secondary_white"
                android:fontFamily="@font/pt_sans_narrow_regular"
                android:hint="@string/description"
                android:inputType="text"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/primary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/secondActionResultEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:background="@color/secondary_white"
                android:fontFamily="@font/pt_sans_narrow_regular"
                android:hint="@string/result"
                android:inputType="text"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/primary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/secondActionResultImageUrlEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:background="@color/secondary_white"
                android:fontFamily="@font/pt_sans_narrow_regular"
                android:hint="@string/result_image_url"
                android:inputType="textUri"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/primary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:gravity="center">

                <CheckBox
                    android:id="@+id/secondActionIsPositiveCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/pt_sans_narrow_regular"
                    android:text="@string/is_positive"
                    android:textAlignment="center"
                    android:textColor="@color/primary"
                    android:textStyle="bold"
                    android:textSize="20sp" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/saveButton"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_default_button"
                android:fontFamily="@font/pt_sans_narrow_regular"
                android:text="@string/save"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>